--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@
 body {
 	font-family: 'Titillium Web', sans-serif !important;
 }
-h2 {
-	font-weight: 600;
+.jcIrny {
+	font-family: 'Open Sans', sans-serif !important;
+	font-weight: 600 !important;
+}
+.fVKzSu, ._2vkeRJojnV7cb9pMlPHy7d {
+	background-color: rgba(255,255,255, 0.8) !important;
+}
+._1poyrkZ7g36PawDueRza-J {
+	background-color: rgba(255,255,255, 0.8) !important;
 }
 /*._23h0-EcaBUorIHC-JZyh6J {
   background-color: #1c0030;
@@ -23,7 +30,7 @@ h2 {
 }
 */
 #bg {
-	z-index: -1;
+	z-index: 2;
 	position: absolute;
 	top: 0px;
 	left: 0px;
