--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
 ._1poyrkZ7g36PawDueRza-J {
 	background-color: rgba(255,255,255, 0.8) !important;
 }
+
+._1O4jTk-dZ-VIxsCuYB6OR8 {
+	filter: invert(100%);
+}
 /*._23h0-EcaBUorIHC-JZyh6J {
   background-color: #1c0030;
 }
